Fixed website scrolling by disabling overflow : hidden

--- a/src/components/ResourceCard/ResourceCard.scss
+++ b/src/components/ResourceCard/ResourceCard.scss
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Poppins";
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .user_name {
@@ -19,8 +19,6 @@ body {
   color: rgb(0, 0, 0);
   font-size: 20px;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .container {
